--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,3 +1,8 @@
 {
-
+  "navbar": {
+    "about-us": "About Us",
+    "contact": "Contact",
+    "menu": "Menu",
+    "reservations": "Reservations"
+  }
 }
