--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -1,3 +1,8 @@
 {
-
+  "navbar": {
+    "about-us": "Nosotros",
+    "contact": "Contacto",
+    "menu": "Menú",
+    "reservations": "Reservaciones"
+  }
 }
