[add] Section 4 Responsive

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -15,6 +15,12 @@
       "title": "Imagine experiencing a country from the inside out — where the beauty of our tropical paradise can be tasted.",
       "body": "From fresh, ethically sourced fish from Guanacaste to locally farmed produce, every product is chosen for its narrative as much as its quality. Sustainability isnʼt an option — itʼs a responsibility. And flavor is only the beginning.",
       "button": "View the Menu"
+    },
+    "section-4": {
+      "title": "A Legacy of Migration, A Language of Flavor",
+      "body-1": "Nikkei cuisine was born not from trends, but from necessity, love, and re-invention.  In the late 1800s, Japanese and Chinese migrants arrived in Peru, bringing ancestral techniques and <br class='desktop'> reverence for purity. <br><br>",
+      "body-2": "These traditions blended with bold Peruvian ingredients like ají, rocoto chili, corn, sweet potato, and local seafood from the Pacific Ocean, giving rise to an entirely new cuisine — one that continues to evolve, reinterpret, and inspire.",
+      "button": "Our Story"
     }
   }
 }
