--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -15,6 +15,12 @@
       "title": "Imagina experimentar un país desde dentro, donde se puede saborear la belleza de nuestro paraíso tropical.",
       "body": "Desde pescado fresco y de origen ético procedente de Guanacaste hasta productos cultivados localmente, cada producto se elige tanto por su historia como por su calidad. La sostenibilidad no es una opción, es una responsabilidad. Y el sabor es solo el principio.",
       "button": "Ver el menú"
+    },
+    "section-4": {
+      "title": "Un legado de migración, Un lenguaje de sabores",
+      "body-1": "La cocina nikkei no nació de una moda, sino de la necesidad, el amor y la reinvención.  A finales del siglo XIX, inmigrantes japoneses y chinos llegaron a Perú trayendo consigo técnicas ancestrales y un gran respeto por la pureza. <br><br>",
+      "body-2": "Estas tradiciones se fusionaron con ingredientes peruanos tan característicos como el ají, el rocoto, el maíz, la batata y los mariscos locales del océano Pacífico, dando lugar a una cocina totalmente nueva, que sigue evolucionando, reinterpretándose e inspirando.",
+      "button": "Nuestra historia"
     }
   }
 }
