[add] Section 5 Translations

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -21,6 +21,11 @@
       "body-1": "Nikkei cuisine was born not from trends, but from necessity, love, and re-invention.  In the late 1800s, Japanese and Chinese migrants arrived in Peru, bringing ancestral techniques and <br class='desktop'> reverence for purity. <br><br>",
       "body-2": "These traditions blended with bold Peruvian ingredients like ají, rocoto chili, corn, sweet potato, and local seafood from the Pacific Ocean, giving rise to an entirely new cuisine — one that continues to evolve, reinterpret, and inspire.",
       "button": "Our Story"
+    },
+    "section-5": {
+      "title": "Not Just a Restaurant, <br> But a <i>Curated Collective</i>",
+      "body": "From international Nikkei chefs, sommeliers, experience designers, and local farmers who live and breathe Nikkei philosophy,  weʼve built a team that goes beyond <br class='desktop'> culinary excellence.<br/><br/>",
+      "button": "Plan your visit"
     }
   }
 }
