--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -21,6 +21,11 @@
       "body-1": "La cocina nikkei no nació de una moda, sino de la necesidad, el amor y la reinvención.  A finales del siglo XIX, inmigrantes japoneses y chinos llegaron a Perú trayendo consigo técnicas ancestrales y un gran respeto por la pureza. <br><br>",
       "body-2": "Estas tradiciones se fusionaron con ingredientes peruanos tan característicos como el ají, el rocoto, el maíz, la batata y los mariscos locales del océano Pacífico, dando lugar a una cocina totalmente nueva, que sigue evolucionando, reinterpretándose e inspirando.",
       "button": "Nuestra historia"
+    },
+    "section-5": {
+      "title": "No solo un restaurante, sino un <i>colectivo seleccionado</i>",
+      "body": "A partir de chefs nikkei internacionales, sumilleres, diseñadores de experiencias y agricultores locales que viven y respiran la filosofía nikkei,  hemos creado un equipo que va más allá de la excelencia culinaria.<br/><br/>",
+      "button": "Planea tu visita"
     }
   }
 }
