[add] Section 6 Desktop

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -26,6 +26,13 @@
       "title": "Not Just a Restaurant, <br> But a <i>Curated Collective</i>",
       "body": "From international Nikkei chefs, sommeliers, experience designers, and local farmers who live and breathe Nikkei philosophy,  weʼve built a team that goes beyond <br class='desktop'> culinary excellence.<br/><br/>",
       "button": "Plan your visit"
+    },
+    "section-6": {
+      "title-1": "\"Our entire menu was created with cultural diversity in mind, and to celebrate the rich biodiversity shared by both our countries.\"",
+      "body-1": "With over a decade of experience in Nikkei cuisine, Sergio Nakamura is co-owner of the renowned Gaijin restaurant in Lima. Trained at Le Cordon Bleu, he honed his craft at two of the worldʼs most acclaimed restaurants: Central and Maido — both ranked among the Worldʼs 50 Best Restaurants, according to the San Pellegrino Guide.",
+      "title-2": "\"With our menu, we wanted to convey balance, identity, <br> and emotion.\"",
+      "body-2": "A chef by practice and passion, Carlos Gamboa has shaped his culinary journey through training in Costa Rica, Peru, Colombia, and Mexico. His experience in top-tier hotels and restaurants — including Marriott, JW Marriott, Cala Luna, Sheraton, and El Silencio — has been instrumental in developing a cuisine defined by character and soul.",
+      "button": "Reserve now"
     }
   }
 }
