--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -26,6 +26,13 @@
       "title": "No solo un restaurante, sino un <i>colectivo seleccionado</i>",
       "body": "A partir de chefs nikkei internacionales, sumilleres, diseñadores de experiencias y agricultores locales que viven y respiran la filosofía nikkei,  hemos creado un equipo que va más allá de la excelencia culinaria.<br/><br/>",
       "button": "Planea tu visita"
+    },
+    "section-6": {
+      "title-1": "\"Todo nuestro menú se ha creado teniendo en cuenta la diversidad cultural y con el fin de celebrar la rica biodiversidad que comparten nuestros dos países.\"",
+      "body-1": "Con más de una década de experiencia en la cocina nikkei, Sergio Nakamura es copropietario del famoso restaurante Gaijin en Lima. Formado en Le Cordon Bleu, perfeccionó su arte en dos de los restaurantes más aclamados del mundo: Central y Maido, ambos clasificados entre los 50 mejores restaurantes del mundo, según la guía San Pellegrino.",
+      "title-2": "\"Con nuestro menú, queremos transmitir equilibrio, identidad y emoción.\"",
+      "body-2": "Chef por vocación y pasión, Carlos Gamboa ha forjado su trayectoria culinaria formándose en Costa Rica, Perú, Colombia y México. Su experiencia en hoteles y restaurantes de primer nivel, entre los que se incluyen Marriott, JW Marriott, Cala Luna, Sheraton y El Silencio, ha sido fundamental para desarrollar una cocina que se define por su carácter y alma.",
+      "button": "Reserve ahora"
     }
   }
 }
