--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -33,6 +33,15 @@
       "title-2": "\"With our menu, we wanted to convey balance, identity, <br> and emotion.\"",
       "body-2": "A chef by practice and passion, Carlos Gamboa has shaped his culinary journey through training in Costa Rica, Peru, Colombia, and Mexico. His experience in top-tier hotels and restaurants — including Marriott, JW Marriott, Cala Luna, Sheraton, and El Silencio — has been instrumental in developing a cuisine defined by character and soul.",
       "button": "Reserve now"
+    },
+    "section-7": {
+      "title": "From Simplicity, Something Singular",
+      "subtitle": "The meaning behind Ensō",
+      "body-1": "Our story began with a journey that took us to Japan for over four years, where we immersed ourselves in its symbolism, rituals, and way of life. From that experience, we discovered not just a way of being, but a way of feeling life itself.",
+      "body-2": "Like the warrior who masters rhythm and form, we understand that every dish, space, and gesture is an invisible art—a fleeting mastery where imperfection becomes beauty, and where simplicity transforms into something singular.",
+      "body-3": "The crane emerged as our first root—an eternal symbol of longevity, good fortune, and the heritage we commit to carry forward with every creation.",
+      "button-1": "Plan Your Visit",
+      "button-2": "Book the Experience"
     }
   }
 }
