--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -33,6 +33,15 @@
       "title-2": "\"Con nuestro menú, queremos transmitir equilibrio, identidad y emoción.\"",
       "body-2": "Chef por vocación y pasión, Carlos Gamboa ha forjado su trayectoria culinaria formándose en Costa Rica, Perú, Colombia y México. Su experiencia en hoteles y restaurantes de primer nivel, entre los que se incluyen Marriott, JW Marriott, Cala Luna, Sheraton y El Silencio, ha sido fundamental para desarrollar una cocina que se define por su carácter y alma.",
       "button": "Reserve ahora"
+    },
+    "section-7": {
+      "title": "De la simplicidad, algo único",
+      "subtitle": "El significado detrás de Ensō",
+      "body-1": "Nuestra historia comenzó con un viaje que nos llevó a Japón durante más de cuatro años, donde nos sumergimos en su simbolismo, sus rituales y su forma de vida. A partir de esa experiencia, descubrimos no solo una forma de ser, sino una forma de sentir la vida misma.",
+      "body-2": "Al igual que el guerrero que domina el ritmo y la forma, entendemos que cada plato, cada espacio y cada gesto es un arte invisible, una maestría efímera en la que la imperfección se convierte en belleza y la simplicidad se transforma en algo singular.",
+      "body-3": "La grulla surgió como nuestra primera raíz, un símbolo eterno de longevidad, buena fortuna y el legado que nos comprometemos a transmitir con cada creación.",
+      "button-1": "Planea tu visita",
+      "button-2": "Reserva la experiencia"
     }
   }
 }
