--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -42,6 +42,11 @@
       "body-3": "The crane emerged as our first root—an eternal symbol of longevity, good fortune, and the heritage we commit to carry forward with every creation.",
       "button-1": "Plan Your Visit",
       "button-2": "Book the Experience"
+    },
+    "section-8": {
+      "title": "From there, we embraced the circle: open, infinite, imperfect yet whole.",
+      "body": "Within this circle rise the five rings that embodies heritage, mastery, and transformation, each of them inspired by the elements of Earth, Fire, Water, Wind, and Ether (guided by The Book of Five Rings by samurai Miyamoto Musashi).",
+      "button": "Plan Your Visit"
     }
   }
 }
