[add] Section 9 Responsive

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -47,6 +47,10 @@
       "title": "From there, we embraced the circle: open, infinite, imperfect yet whole.",
       "body": "Within this circle rise the five rings that embodies heritage, mastery, and transformation, each of them inspired by the elements of Earth, Fire, Water, Wind, and Ether (guided by The Book of Five Rings by samurai Miyamoto Musashi).",
       "button": "Plan Your Visit"
+    },
+    "section-9" : {
+      "title" : "An authentic Nikkei gastronomic experience",
+      "button" : "Reserve now"
     }
   }
 }
