--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -47,6 +47,10 @@
       "title": "A partir de ahí, abrazamos el círculo: abierto, infinito, imperfecto pero completo.",
       "body": "Dentro de este círculo se elevan los cinco anillos que encarnan la herencia, la maestría y la transformación, cada uno de ellos inspirado en los elementos Tierra, Fuego, Agua, Viento y Éter (guiados por El libro de los cinco anillos del samurái Miyamoto Musashi).",
       "button": "Planea tu visita"
+    },
+    "section-9" : {
+      "title" : "Una auténtica experiencia gastronómica Nikkei",
+      "button" : "Reserva ahora"
     }
   }
 }
