--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -66,5 +66,92 @@
     "back-to-top": "Volver arriba",
     "privacy-policy": "Política de privacidad",
     "terms-and-conditions": "Términos & Condiciones"
+  },
+  "SEO": {
+    "home": {
+      "title": "Ensō - Restaurante Nikkei en Costa Rica | Cocina Fusión Japonesa-Peruana",
+      "description": "Descubrí Ensō, un restaurante Nikkei de lujo en Escazú, Costa Rica con un menú de degustación único inspirado en la naturaleza costarricense y la maestría culinaria.",
+      "keywords": [
+        "bar nikkei",
+        "menú nikkei",
+        "nikkei menu",
+        "significado de nikkei",
+        "horario nikkei",
+        "restaurante nikkei",
+        "sushi nikkei",
+        "restaurante nikkei cerca de mí",
+        "restaurante nikkei costa rica",
+        "tokyo nikkei cerca de mí",
+        "comida nikkei san josé costa rica",
+        "restaurante nikkei san josé costa rica",
+        "restaurante nikkei escazú",
+        "nikki cerca de mí",
+        "sushi costa rica",
+        "sushi escazú",
+        "sushi san josé costa rica",
+        "comida japonesa costa rica",
+        "comida japonesa escazú",
+        "comida japonesa san josé costa rica",
+        "restaurante japonés costa rica",
+        "restaurante japonés escazú",
+        "restaurante peruano costa rica",
+        "restaurante peruano escazú",
+        "restaurante peruano san josé costa rica",
+        "comida peruana costa rica",
+
+        "cocina nikkei",
+        "fusión japonesa peruana",
+        "restaurante japonés peruano",
+        "sushi de fusión",
+        "mejor sushi escazú",
+        "mejor restaurante nikkei costa rica",
+        "mejores restaurantes escazú",
+        "alta cocina escazú",
+        "menú degustación escazú",
+        "menú del chef costa rica",
+        "omakase escazú",
+        "omakase costa rica",
+        "restaurante romántico escazú",
+        "cena romántica escazú",
+        "bar de cócteles escazú",
+        "cocteles con pisco escazú",
+        "cócteles con pisco escazú",
+        "bar de sake costa rica",
+        "ceviche nikkei",
+        "tiradito nikkei",
+        "reservar mesa escazú",
+        "reservas restaurante escazú",
+        "horarios restaurante escazú",
+        "salón privado escazú",
+        "eventos y grupos escazú",
+
+        "ensō restaurante",
+        "enso restaurante",
+        "ensō nikkei",
+        "enso nikkei",
+        "ensō escazú",
+        "enso escazu",
+
+        "restaurantes en escazú costa rica",
+        "restaurantes en escazu costa rica",
+        "restaurantes san josé costa rica",
+        "restaurantes san jose costa rica",
+        "sushi san josé cr",
+        "sushi san jose cr",
+        "nikkei cr"
+      ]
+    }
+  },
+  "image-alt": {
+    "home": {
+      "scallops": "Conchas de abanico con salsa XO y tare, parte del exclusivo menu nikkei en restaurante gourmet de Escazú, Costa Rica.",
+      "batayaki": "Pulpo Batayaki con salsa de anguila y togarashi, una fusión única en restaurante de lujo en la GAM de Costa Rica.",
+      "usuzukuri": "Usuzukuri Midori nikkei: pesca del día con leche de tigre de jalapeño y crujientes de ñame en Escazú, Costa Rica.",
+      "shiromi": "Shiromi Pachikay: Pesca del día con salsa yukke, pachikay y negui, parte del exclusivo nikkei menu en restaurante Nikkei de Avenida Escazú",
+      "structure": "Detalle de un arco chino tradicional con techo de tejas verdes.",
+      "sergio": "Chef Sergio Nakamura preparando un platillo Nikkei en la cocina.",
+      "carlos": "Chef Carlos Gamboa pescando mariscos.",
+      "experience": "Experience the finest Nikkei dining in Avenida Escazú, Costa Rica — a sophisticated destination for Japanese-Peruvian culinary excellence."
+    }
   }
 }
