--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -7,50 +7,50 @@
   },
   "home" : {
     "grid-section": {
-      "title": "Donde convergen la precisión japonesa, el alma peruana y la esencia costarricense.",
-      "body": "Bienvenido a Ensō. <br class=\"mobile\"><br class=\"mobile\"> Una celebración de la maestría nikkei en el corazón de Escazú, Costa Rica. <br><br>      Inspirados por el terruño costarricense y la verdadera esencia que se encuentra en la simplicidad y magnificencia de la <i>naturaleza</i>, nuestros chefs elaboran un menú degustación único. <br><br>   Combinando la precisión japonesa con el alma peruana y la biodiversidad costarricense, honramos el legado de la cocina nikkei y lo llevamos adelante con nuestra propia visión.",
-      "button": "Reserva la experiencia"
+      "title": "Donde la precisión japonesa, el alma peruana y la esencia costarricense se mezclan.",
+      "body": "Bienvenidos a Ensō. <br class=\"mobile\"><br class=\"mobile\"> Una celebración de la maestría Nikkei en el corazón de Escazú, Costa Rica. <br><br>      Inspirados en la flora y fauna nacional y la magnífica esencia que alberga la simpleza de la naturaleza, nuestros chefs han creado un menú único que busca honrar las raíces de la cocina Nikkei.  <br><br>   Tomando como base la precisión japonesa, el alma peruana y la biodiversidad costarricense, hemos logrado crear una experiencia que combina técnicas tradicionales con nuestra visón de la comida fusión.",
+      "button": "Reservá la experiencia"
     },
     "black-section": {
-      "title": "Imagina experimentar un país desde dentro, donde se puede saborear la belleza de nuestro paraíso tropical.",
-      "body": "Desde pescado fresco y de origen ético procedente de Guanacaste hasta productos cultivados localmente, cada producto se elige tanto por su historia como por su calidad. La sostenibilidad no es una opción, es una responsabilidad. Y el sabor es solo el principio.",
+      "title": "¿Qué pensarías si te dijéramos que podés saborear la cultura? ",
+      "body": "Desde la pesca del día que llega directamente de los pescadores de Guanacaste hasta los productos frescos cultivados localmente, cada ingrediente se selecciona no solo por su calidad, sino también por la historia que lleva consigo. La sostenibilidad no es una opción, es una responsabilidad. Y en esta experiencia, el sabor es apenas el comienzo.",
       "button": "Ver el menú"
     },
     "section-4": {
-      "title": "Un legado de migración, Un lenguaje de sabores",
-      "body-1": "La cocina nikkei no nació de una moda, sino de la necesidad, el amor y la reinvención.  A finales del siglo XIX, inmigrantes japoneses y chinos llegaron a Perú trayendo consigo técnicas ancestrales y un gran respeto por la pureza. <br><br>",
-      "body-2": "Estas tradiciones se fusionaron con ingredientes peruanos tan característicos como el ají, el rocoto, el maíz, la batata y los mariscos locales del océano Pacífico, dando lugar a una cocina totalmente nueva, que sigue evolucionando, reinterpretándose e inspirando.",
+      "title": "La cocina Nikkei: El Legado de la Migración",
+      "body-1": "La cocina Nikkei no es una cocina fusión nace a partir de tendencias, sino que alberga toda una historia llena de necesidad, el amor y reinvención. A finales del siglo XIX, migrantes japoneses y chinos llegaron al Perú, trayendo consigo técnicas ancestrales y una profunda reverencia por la pureza. <br><br>",
+      "body-2": "Estas tradiciones se fusionaron con ingredientes peruanos como el ají, el rocoto, el maíz, el camote y los frutos del mar del Pacífico, dando origen a una cocina completamente nueva — una que sigue evolucionando, reinterpretando e inspirando.",
       "button": "Nuestra historia"
     },
     "section-5": {
-      "title": "No solo un restaurante, sino un <i>colectivo seleccionado</i>",
-      "body": "A partir de chefs nikkei internacionales, sumilleres, diseñadores de experiencias y agricultores locales que viven y respiran la filosofía nikkei,  hemos creado un equipo que va más allá de la excelencia culinaria.<br/><br/>",
-      "button": "Planea tu visita"
+      "title": "No solo un restaurante, es un <i>movimiento</i>.",
+      "body": "Desde chefs Nikkei internacionales, sommeliers y diseñadores de experiencias, hasta agricultores locales que viven y respiran la filosofía Nikkei, hemos formado un equipo que va más allá de la excelencia culinaria.<br/><br/>",
+      "button": "Planificá tu visita"
     },
     "section-6": {
-      "title-1": "\"Todo nuestro menú se ha creado teniendo en cuenta la diversidad cultural y con el fin de celebrar la rica biodiversidad que comparten nuestros dos países.\"",
-      "body-1": "Con más de una década de experiencia en la cocina nikkei, Sergio Nakamura es copropietario del famoso restaurante Gaijin en Lima. Formado en Le Cordon Bleu, perfeccionó su arte en dos de los restaurantes más aclamados del mundo: Central y Maido, ambos clasificados entre los 50 mejores restaurantes del mundo, según la guía San Pellegrino.",
+      "title-1": "\"Todo nuestro menú fue creado pensando en la diversidad cultural y en celebrar la biodiversidad que comparten ambos países.\"",
+      "body-1": "Con más de una década de experiencia en cocina Nikkei, Sergio Nakamura es cofundador del reconocido restaurante Gaijin en Lima. Formado en Le Cordon Bleu, perfeccionó su arte en dos de los restaurantes más aclamados del mundo: Central y Maido — ambos incluidos en el puesto Nº1 entre los 50 Mejores Restaurantes del Mundo, según la guía San Pellegrino.",
       "title-2": "\"Con nuestro menú, queremos transmitir equilibrio, identidad y emoción.\"",
-      "body-2": "Chef por vocación y pasión, Carlos Gamboa ha forjado su trayectoria culinaria formándose en Costa Rica, Perú, Colombia y México. Su experiencia en hoteles y restaurantes de primer nivel, entre los que se incluyen Marriott, JW Marriott, Cala Luna, Sheraton y El Silencio, ha sido fundamental para desarrollar una cocina que se define por su carácter y alma.",
-      "button": "Reserva ahora"
+      "body-2": "Chef por vocación y pasión, Carlos Gamboa ha forjado una trayectoria culinaria internacional con formación en Costa Rica, Perú, Colombia y México. Su experiencia en hoteles y restaurantes de primer nivel —entre ellos Marriott, JW Marriott, Cala Luna, Sheraton y El Silencio— ha sido un factor clave en el desarrollo de una carta llena de carácter y alma.",
+      "button": "Reservá ahora"
     },
     "section-7": {
-      "title": "De la simplicidad, algo único",
-      "subtitle": "El significado detrás de Ensō",
-      "body-1": "Nuestra historia comenzó con un viaje que nos llevó a Japón durante más de cuatro años, donde nos sumergimos en su simbolismo, sus rituales y su forma de vida. A partir de esa experiencia, descubrimos no solo una forma de ser, sino una forma de sentir la vida misma.",
-      "body-2": "Al igual que el guerrero que domina el ritmo y la forma, entendemos que cada plato, cada espacio y cada gesto es un arte invisible, una maestría efímera en la que la imperfección se convierte en belleza y la simplicidad se transforma en algo singular.",
-      "body-3": "La grulla surgió como nuestra primera raíz, un símbolo eterno de longevidad, buena fortuna y el legado que nos comprometemos a transmitir con cada creación.",
-      "button-1": "Planea tu visita",
-      "button-2": "Reserva la experiencia"
+      "title": "De lo simple, algo único.",
+      "subtitle": "El significado de Ensō",
+      "body-1": "Nuestra historia comienza en Japón, viaje de más de cuatro años en donde nos sumergimos en su simbolismo, rituales y la manera de ver la vida. Con ojos bien abiertos y expectantes, descubrimos que la vida no se trata ser, sino sentir, apreciar y honrar. ",
+      "body-2": "Y así como un guerrero domina el ritmo y la forma, comprendemos que cada plato, espacio y gesto son un arte invisible. Una maestría efímera donde la imperfección se convierte en belleza pura y donde lo simple se transforma en algo único.",
+      "body-3": "La grulla llegó a Ensō como nuestra raíz principal - un símbolo eterno que representa longevidad, buena fortuna y el legado que nos comprometemos a honrar en cada una de nuestras creaciones.",
+      "button-1": "Planificá tu visita",
+      "button-2": "Viví la experiencia"
     },
     "section-8": {
-      "title": "A partir de ahí, abrazamos el círculo: abierto, infinito, imperfecto pero completo.",
-      "body": "Dentro de este círculo se elevan los cinco anillos que encarnan la herencia, la maestría y la transformación, cada uno de ellos inspirado en los elementos Tierra, Fuego, Agua, Viento y Éter (guiados por El libro de los cinco anillos del samurái Miyamoto Musashi).",
-      "button": "Planea tu visita"
+      "title": "De ahí emergió el círculo, una forma: abierta, infinita, imperfecta y completa.",
+      "body": "En este círculo surgen los cinco anillos que encarnan la herencia, la maestría y la transformación, cada uno inspirado en los elementos de Tierra, Fuego, Agua, Viento y Éter (guiados por <i>El Libro de los Cinco Anillos</i> del samurái Miyamoto Musashi).",
+      "button": "Planificá tu visita"
     },
     "section-9" : {
-      "title" : "Una auténtica experiencia gastronómica Nikkei",
-      "button" : "Reserva ahora"
+      "title" : "Comida Nikkei auténtica",
+      "button" : "Reservá ahora"
     }
   },
   "footer": {
@@ -59,9 +59,9 @@
     "menu": "Menú",
     "address": "Dirección",
     "open-hours": "Horario",
-    "open-hours-details": "De 12:00 hasta 21:00 Lunes a Domingo",
+    "open-hours-details": "De 12:00 hasta 22:00 Lunes a Domingo",
     "book-a-table": "Reservar una mesa",
-    "book-details": "Sumérgete en una experiencia nikkei única en Costa Rica.",
+    "book-details": "Tu primer paso hacia una experiencia Nikkei única en Costa Rica.",
     "reserve-button": "Reservar ahora",
     "back-to-top": "Volver arriba",
     "privacy-policy": "Política de privacidad",
@@ -119,8 +119,8 @@
         "bar de sake costa rica",
         "ceviche nikkei",
         "tiradito nikkei",
-        "reservar mesa escazú",
-        "reservas restaurante escazú",
+        "Reservar mesa escazú",
+        "Reservas restaurante escazú",
         "horarios restaurante escazú",
         "salón privado escazú",
         "eventos y grupos escazú",
