Adds address-related translations
Adds translations for "P.O. Box" and "Zip Code" in both English and Spanish to enhance clarity and provide a more complete address representation.

Also, updates the meta image to a webp format for better performance.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -58,6 +58,8 @@
     "about": "About",
     "menu": "Menu",
     "address": "Address",
+    "po-box": "P.O. Box",
+    "zip-code": "Zip Code",
     "open-hours": "Opening Hours",
     "open-hours-details": "From 12:00 until 22:00 Monday to Sunday",
     "book-a-table": "Book a Table",
