Updates content and adds map link
Updates chef bios in the i18n files to provide more context.

Makes the map icon in the footer clickable, opening a Google Maps link.

Adjusts some minor styling issues on the home page and navigation bar.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -145,8 +145,8 @@
       "usuzukuri": "Usuzukuri Midori Nikkei: catch of the day with jalapeño tiger milk and crispy yam in Escazú, Costa Rica.",
       "shiromi":"Shiromi Pachikay: Catch of the day with yukke sauce, pachikay, and negui, part of the exclusive Nikkei menu at the Nikkei restaurant on Avenida Escazú.",
       "structure": "Detail of a traditional Chinese archway with green tiled roof.",
-      "sergio": "Chef Sergio Nakamura preparing a dish in the kitchen.",
-      "carlos": "Chef Carlos Gamboa fishing for seafood.",
+      "sergio": "Discover Sergio Nakamura’s journey in Nikkei cuisine — co-owner of Gaijin Lima, trained at Le Cordon Bleu, with experience at Central & Maido..",
+      "carlos": "With experience at Marriott, JW Marriott and Sheraton, Chef Carlos Gamboa crafts Nikkei cuisine al Ensō in Avenida Escazú.",
       "experience": "Disfrute de la mejor gastronomía nikkei en Avenida Escazú, Costa Rica, un sofisticado destino para degustar la excelencia culinaria japonesa-peruana."
     }
   }
