--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -151,8 +151,8 @@
       "usuzukuri": "Usuzukuri Midori nikkei: pesca del día con leche de tigre de jalapeño y crujientes de ñame en Escazú, Costa Rica.",
       "shiromi": "Shiromi Pachikay: Pesca del día con salsa yukke, pachikay y negui, parte del exclusivo nikkei menu en restaurante Nikkei de Avenida Escazú",
       "structure": "Detalle de un arco chino tradicional con techo de tejas verdes.",
-      "sergio": "Chef Sergio Nakamura preparando un platillo Nikkei en la cocina.",
-      "carlos": "Chef Carlos Gamboa pescando mariscos.",
+      "sergio": "Descubre el recorrido de Sergio Nakamura en la cocina nikkei: copropietario de Gaijin Lima, formado en Le Cordon Bleu y con experiencia en Central y Maido.",
+      "carlos": "Con experiencia en Marriott, JW Marriott y Sheraton, el chef Carlos Gamboa elabora cocina nikkei al estilo Ensō en Avenida Escazú.",
       "experience": "Experience the finest Nikkei dining in Avenida Escazú, Costa Rica — a sophisticated destination for Japanese-Peruvian culinary excellence."
     }
   }
