--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -18,12 +18,12 @@
     },
     "section-4": {
       "title": "La cocina Nikkei: El Legado de la Migración",
-      "body-1": "La cocina Nikkei no es una cocina fusión nace a partir de tendencias, sino que alberga toda una historia llena de necesidad, el amor y reinvención. A finales del siglo XIX, migrantes japoneses y chinos llegaron al Perú, trayendo consigo técnicas ancestrales y una profunda reverencia por la pureza. <br><br>",
+      "body-1": "La cocina Nikkei no es una cocina fusión que nace a partir de tendencias, sino que alberga toda una historia llena de necesidad, el amor y reinvención. A finales del siglo XIX, migrantes japoneses y chinos llegaron al Perú, trayendo consigo técnicas ancestrales y una profunda reverencia por la pureza. <br><br>",
       "body-2": "Estas tradiciones se fusionaron con ingredientes peruanos como el ají, el rocoto, el maíz, el camote y los frutos del mar del Pacífico, dando origen a una cocina completamente nueva — una que sigue evolucionando, reinterpretando e inspirando.",
       "button": "Nuestra historia"
     },
     "section-5": {
-      "title": "No solo un restaurante, es un <i>movimiento</i>.",
+      "title": "No es solo un restaurante, es un <i>movimiento</i>.",
       "body": "Desde chefs Nikkei internacionales, sommeliers y diseñadores de experiencias, hasta agricultores locales que viven y respiran la filosofía Nikkei, hemos formado un equipo que va más allá de la excelencia culinaria.<br/><br/>",
       "button": "Planificá tu visita"
     },
