[add] Uber link and changed footer distribution

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -62,6 +62,7 @@
     "zip-code": "Zip Code",
     "open-hours": "Opening Hours",
     "open-hours-details": "From 12:00 until 22:00 Monday to Sunday",
+    "find-us-on": "Find us on",
     "book-a-table": "Book a Table",
     "book-details": "Step into a unique nikkei experience in Costa Rica.",
     "reserve-button": "Reserve now",
