--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -62,6 +62,7 @@
     "zip-code": "Código postal",
     "open-hours": "Horario",
     "open-hours-details": "De 12:00 hasta 22:00 Lunes a Domingo",
+    "find-us-on": "Encontranos en",
     "book-a-table": "Reservar una mesa",
     "book-details": "Tu primer paso hacia una experiencia Nikkei única en Costa Rica.",
     "reserve-button": "Reservar ahora",
